Integrate feedback for paper 12 review.

--- a/reports/012/reproreview_012.Rmd
+++ b/reports/012/reproreview_012.Rmd
@@ -59,18 +59,18 @@ Iskandaryan, D., Di Sabatino, S., Ramos, F., and Trilles, S.: Exploratory Analys
 
 # Summary
 
-The paper evaluates the competence of selected features in the prediction of Nitrogen Dioxide with Machine Learning. For this reproduciblity review, the Figures and Tables of *Section 5 - Experiments and Results* were considered, while the Figures of *Section 3 - Exploratory Analysis* were not. The code of the corresponding analysis can be found in the following archived Github repository: [https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection](https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection). The data that is necessary to run the code can be found in the following Zenodo repository: [https://zenodo.org/record/6543074](https://zenodo.org/record/6543074). The reproduced results were in accordance with the ones reported in the paper, so the **reproduction** of the paper is considered **successful**.
+The paper evaluates the competence of selected features in the prediction of Nitrogen Dioxide with Machine Learning. For this reproduciblity review, the Figures and Tables of *Section 5 - Experiments and Results* were considered, while the Figures of *Section 3 - Exploratory Analysis* were not. The code of the corresponding analysis was provided as a Github repository and the data that is necessary to run the code were provided through a Zenodo repository. The reproduced results were in accordance with the ones reported in the paper, so the **reproduction** of the paper is considered **successful**.
 
 
 \clearpage
 
 # Reproducibility reviewer notes
 
-The code for the reproduction of the paper's analysis was provided as a Github repository in the *Data and Software Availability* Section of the paper and the necessary data to run the code was provided as a Zenodo repository in the README of the aforementioned Github repository. The link to the datasets is the following [https://zenodo.org/record/6543074](https://zenodo.org/record/6543074). After the reproducibility review, the Github repository was forked and archived under the official Reproducible AGILE Github organization. 
+The code for the reproduction of the paper's analysis was provided as a Github repository in the *Data and Software Availability* Section of the paper and the necessary data to run the code was provided as a Zenodo repository in the README of the aforementioned Github repository. The code of the corresponding analysis can be found in the following Github repository: [https://github.com/Ditsuhi/ExploratoryAnalysis_FeatureSelection](https://github.com/Ditsuhi/ExploratoryAnalysis_FeatureSelection). The data that is necessary to run the code can be found in the following Zenodo repository: [https://zenodo.org/record/6543074](https://zenodo.org/record/6543074).  After the reproducibility review, the Github repository was forked and archived under the official Reproducible AGILE Github organization: [https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection](https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection).
 
-The implementation of the analysis is handled mainly by 2 Jupyter notebooks, which were executed in the environment of Google Colaboratory ([https://colab.research.google.com/](https://colab.research.google.com/)). The data had to be either uploaded manually or externally mounted. The latter required the modification of the corresponding paths in the code. In order to reproduce all the reported results, we had to manipulate the code by commenting and uncommenting different chunks, something that is not ideal. Furthermore, previous experience with the Keras API was necessary in order to figure out how the manipulation should be properly handled. Instructions on how to use the notebooks were not provided with the README.
+The implementation of the analysis is handled mainly by 2 Jupyter notebooks, which were executed in the environment of Google Colaboratory ([https://colab.research.google.com/](https://colab.research.google.com/)). The data had to be either uploaded manually or externally mounted. The latter required the modification of the corresponding paths in the code. In order to reproduce all the reported results, we had to manipulate the code by commenting and uncommenting different chunks, something that is not ideal. Furthermore, previous experience with the Keras API was necessary in order to figure out how the manipulation should be properly handled. Instructions on how to use the notebooks were not provided with the README. Some useful hints were included in the code as comments.
 
-In order to eliminate any uncertainty that is induced by training Machine Learning models with early stopping callback, the authors were encouraged to provide the models that they had already trained, as well as the training weights. Eventually, the authors provided both the trained models and the code for training new ones for the needs of the reproducibility review.
+In order to eliminate any uncertainty that is induced by training Machine Learning models with early stopping callback, the authors were encouraged to provide the models that they had already trained, as well as the training weights. Eventually, the authors updating their public Github repository with both the trained models and the code for training new ones for the needs of the reproducibility review.
 
 ### Reproduced figures
 
@@ -86,7 +86,7 @@ knitr::include_graphics('./reproduced/Figure14.png')
 
 ### Reproduced tables
 
-The reproduced tables (Table 2, 3 and 4) were created using the following Jupyter notebook.  [https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection/blob/main/BiConvLSTM.ipynb](https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection/blob/main/BiConvLSTM.ipynb). The creation required to manipulate and rerun the code and then combine the results in a manual fashion. Below are showcased the different screenshots that were collected throughout this process:
+The reproduced tables (Table 2, 3 and 4) were created using the following Jupyter notebook.  [https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection/blob/main/BiConvLSTM.ipynb](https://github.com/reproducible-agile/ExploratoryAnalysis_FeatureSelection/blob/main/BiConvLSTM.ipynb). The creation required to manipulate and rerun the code and then combine the results in a manual fashion. The results were found to be identical with the numbers reported in the paper. Below are showcased the different screenshots that were collected throughout this process:
 
 
 ```{r, echo=FALSE,out.width="35%",fig.cap="Corresponds to Table 2 of the reproduced paper",fig.show='hold',fig.align='center', nCol = 2,}
